--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>Uh Oh! You screwed up nerd!</h1>
+<h1>404: Not found!</h1>
   <br>
 	
 <a href="https://ifoodstampz.github.io">
