--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>IFoodstampZ</h1>
-<a href="https://ifoodstampz.github.io/clubstep" target="_blank">Clubstep</a>
+<a href="https://www.tomorrowtides.com/trololol1.html" target="_blank">I have 2 braincells and they bounce around like a screensaver.</a>
 
 </body>
 </html>
