--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h1>( ͡° ͜ʖ ͡°)</h1>
-<a href="https://www.tomorrowtides.com/trololol1.html" target="_blank">I have 2 braincells and they bounce around like a screensaver. ( ͡° ͜ʖ ͡°) ( ͡° ͜ʖ ͡°) ( ͡° ͜ʖ ͡°)</a>
+<h1>ಠ_ಠ</h1>
+<a href="https://www.tomorrowtides.com/trololol1.html" target="_blank">I have 2 braincells and they bounce around like a screensaver.ಠ_ಠ</a>
 <h2>W49<h2>
 </body>
 </html>
