--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <h1>ಠ_ಠ</h1>
 <a href="https://www.tomorrowtides.com/trololol1.html" target="_blank">I have 2 braincells and they bounce around like a screensaver.ಠ_ಠ</a>
+<a href="https://www.7silver.github.io/8ball" target="_blank">8Ballಠ_ಠ</a>
 <h2>W49<h2>
 </body>
 </html>
