--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <h1>ಠ_ಠ</h1>
 <a href="https://www.tomorrowtides.com/trololol1.html" target="_blank">I have 2 braincells and they bounce around like a screensaver.ಠ_ಠ</a>
   <br>
+  <button type="button" onclick="https://7silver.github.io/8ball/">8 Ball</button>
+  <button type="button" onclick="alert('STINKY!')">lol</button>
 <a href="https://7silver.github.io/8ball/" target="_blank">8Ballಠ_ಠ</a>
 </body>
 </html>
