--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <br>
   <a href="https://7silver.github.io/8ball/" target="_blank">8 Ball</a>
   <br>
-  <a href="https://7silver.github.io/nes/" target="_blank">NES</a>
+  <a href="https://7silver.github.io/nes" target="_blank">NES</a>
   <br>
-  <a href="https://7silver.github.io/snes/" target="_blank">SNES</a>
+  <a href="https://7silver.github.io/snes" target="_blank">SNES</a>
   <br>
-  <a href="https://7silver.github.io/gba/" target="_blank">GBA</a>
+  <a href="https://7silver.github.io/gba" target="_blank">GBA</a>
   <br>
-  <a href="https://7silver.github.io/n64/" target="_blank">N64 (may not work)</a>
+  <a href="https://7silver.github.io/n64" target="_blank">N64 (may not work)</a>
   <br>
-  <a href="https://7silver.github.io/ds/" target="_blank">DS (may not work)</a>
+  <a href="https://7silver.github.io/ds" target="_blank">DS (may not work)</a>
   <br>
 </body>
 </html>
