--- a/tetris.html
+++ b/tetris.html
@@ -1,1 +1,1 @@
-<embed type="text/html" src="www.jstris.com" width="500" height="200">
+<embed type="text/html" src="https://jstris.jezevec10.com/" width="500" height="200">
