--- a/index.html
+++ b/index.html
@@ -3,19 +3,7 @@
 <body>
 
 <h1>ಠ_ಠ</h1>
-<a href="https://www.tomorrowtides.com/trololol1.html" target="_blank">I have 2 braincells and they bounce around like a screensaver.ಠ_ಠ</a>
   <br>
-  <a href="https://7silver.github.io/8ball/" target="_blank">8 Ball</a>
-  <br>
-  <a href="https://7silver.github.io/nes" target="_blank">NES</a>
-  <br>
-  <a href="https://7silver.github.io/snes" target="_blank">SNES</a>
-  <br>
-  <a href="https://7silver.github.io/gba" target="_blank">GBA</a>
-  <br>
-  <a href="https://7silver.github.io/n64" target="_blank">N64 (may not work)</a>
-  <br>
-  <a href="https://7silver.github.io/ds" target="_blank">DS (may not work)</a>
-  <br>
+  <h4>Under Construction, sorry lol</h4>
 </body>
 </html>
