--- a/snes.html
+++ b/snes.html
@@ -3,7 +3,7 @@
       </div>
 <script type="text/javascript">
     EJS_player = '#game';
-    EJS_gameUrl = ''; // Url to Game rom
+    EJS_gameUrl = 'https://7silver.github.io/assets/Astro.smc'; // Url to Game rom
     EJS_gameID = 2; // ID in your website, required for netplay.
     EJS_core = 'snes';
     EJS_mouse = false; // SNES Mouse
